--- a/style.scss
+++ b/style.scss
@@ -452,7 +452,6 @@ summary::-webkit-details-marker {
         border-top-left-radius: 1.5rem;
         border-bottom-left-radius: 1.5rem;
         position: relative;
-        z-index: 3;
         background-color: #E1E1E1;
         border: none;
 
@@ -1500,23 +1499,33 @@ input::-webkit-input-placeholder {
 
 // registration page
 
-.user__info {
-
+.registration__content {
     padding-top: 64px;
+    padding-bottom: 96px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 128px;
+}
 
-    &__title {
-        font-style: normal;
-        font-weight: 300;
-        font-size: 16px;
-        line-height: 19px;
-        color: $textColor;
-        margin-bottom: 21px;
-    }
+.registration__form {
 
-    &__name {
-        display: flex;
-        flex-direction: column;
-        gap: 21px;
+    &__item {
+
+        &__title {
+            font-style: normal;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 19px;
+            color: $textColor;
+            margin-bottom: 21px;
+        }
+
+        &__fields {
+            display: flex;
+            flex-direction: column;
+            gap: 21px;
+        }
 
         &__input {
             width: 358px;
@@ -1529,38 +1538,143 @@ input::-webkit-input-placeholder {
             text-align: left;
             color: #B1B1B1;
         }
+
+        &__gender {
+            margin-top: 30px;
+            margin-bottom: 30px;
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+
+            input[type=checkbox],
+            input[type=radio] {
+                display: none;
+            }
+
+            input[type=radio]+label span {
+                border: 1px solid #A4A4A4;
+                border-radius: 50%;
+                font-style: normal;
+                font-weight: 300;
+                font-size: 11px;
+                line-height: 13px;
+                color: $textColor;
+                display: inline-block;
+                width: 17px;
+                height: 17px;
+                margin: 4px 8px 8px 8px;
+                padding: 2px;
+                text-align: center;
+                vertical-align: middle;
+
+            }
+
+            label {
+                font-style: normal;
+                font-weight: 300;
+                font-size: 11px;
+                line-height: 13px;
+                color: $textColor;
+            }
+
+            input[type=radio]:checked+label span {
+                background: #4A4A4A;
+            }
+
+
+        }
+
+        &__description {
+            margin-top: 16px;
+            margin-bottom: 39px;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 13px;
+            line-height: 16px;
+            color: #B1B1B1;
+            width: 358px;
+        }
+
+
     }
+
+
+
+
+
+
+
+
 
 
 
 
 }
 
-.user__info__gender {
 
-    input[type=checkbox],
-    input[type=radio] {
-        display: none;
+
+.registration__form__button {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    width: 167px;
+    height: 50px;
+    background-color: $colorSelectiveSite;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #FFFFFF;
+    transition: background-color .15s ease-in-out;
+
+
+}
+
+.registration__form__button:hover {
+    background-color: #E05C6E;
+}
+
+.loyalty__perks__info {
+
+    width: 625px;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: $textColor;
+
+    &__title {
+        margin-bottom: 21px;
     }
 
-    input[type=radio]+label span {
-        border: 1px solid #A4A4A4;
-        border-radius: 50%;
-        font-size: 40pt;
-        display: inline-block;
-        width: 17px;
-        height: 17px;
-        line-height: 0.35em;
-        margin: 4px 8px 8px 8px;
-        padding: 2px;
-        text-align: center;
-        vertical-align: middle;
+    &__text {}
 
+    &__offers {
+        padding-top: 21px;
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
     }
 
-    input[type=radio]:checked+label span {
-        background: #4A4A4A;
+
+    &__offer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 23px;
+        transition: 0.2s;
     }
 
+    &__offer:hover {
+        transform: scale(1.1);
+        color: $colorSelectiveSite;
+    }
+
+    &__offer:hover path {
+        fill: $colorSelectiveSite;
+    }
 
 }
